<resources>
    <string name="app_name">AuraCle</string>
    <string name="forgotpass">
        <u>Forgot Password?</u>
    </string>
    <string name="signup">
        <u>Sign Up</u>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="podcast_name">Podcast Name</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="back_btn">Back</string>
    <string name="favourite_btn">Favourites</string>
    <string name="start_tv">00:00</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="Playlist">Playlist</string>
    <string name="share_btn">Share</string>
    <string name="end_tv">Loading..</string>
    <string name="subscribe">Subscribe</string>
    <string name="visit_website">Visit Website</string>
    <string name="appLogo">AppLogo</string>


</resources>