<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Player">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:padding="10dp"
            android:src="@drawable/back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/playlist_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/favourite_btn"
            android:src="@drawable/favorite_empty"
            app:tint="@android:color/holo_red_dark" />
    </LinearLayout>

    <com.faltenreich.skeletonlayout.SkeletonLayout
        android:id="@+id/podcastLoadingSkeleton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/PodcastThumbnail"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon"
                app:shapeAppearanceOverlay="@style/curved"
                app:strokeColor="@color/blue"
                app:strokeWidth="5dp" />

            <TextView
                android:id="@+id/PodcastNamePA"
                style="?attr/textAppearanceLabelSmall"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:text="@string/podcast_name"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </com.faltenreich.skeletonlayout.SkeletonLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous"
            app:iconSize="50dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="@android:color/holo_red_light"
            app:icon="@drawable/pause"
            app:iconSize="50dp"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/curved" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/remainingDuration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/repeat"
            android:tint="@android:color/holo_red_dark" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/equalizer_btn"
            android:src="@drawable/equalizer"
            android:tint="@android:color/holo_red_dark" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/timer_btn"
            android:src="@drawable/timer"
            android:tint="@android:color/holo_red_dark" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            android:src="@drawable/share"
            android:tint="@android:color/holo_red_dark" />

    </LinearLayout>
</LinearLayout>
