<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.faltenreich.skeletonlayout.SkeletonLayout
        android:id="@+id/podcastLoadingSkeleton"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/PodcastThumbnail"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/icon"
                app:shapeAppearanceOverlay="@style/curved"
                app:strokeColor="@color/blue"
                app:strokeWidth="5dp" />

            <TextView
                android:id="@+id/EpisodeNamePA"
                style="?attr/textAppearanceLabelSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="Episode Name"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </com.faltenreich.skeletonlayout.SkeletonLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"

        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/previous"
            app:iconSize="50dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playPauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="@android:color/holo_red_light"
            app:icon="@drawable/pause"
            app:iconSize="50dp"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/curved" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="50dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeekbarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvSeekbarEnd"
            app:layout_constraintStart_toEndOf="@+id/tvSeekbarStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSeekbarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/repeatButtonPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/repeat"
            app:tint="@android:color/holo_red_dark" />

        <ImageButton
            android:id="@+id/favoriteBTNPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/favourite_btn"
            android:src="@drawable/favorite_empty"
            app:tint="@android:color/holo_red_dark" />

        <ImageButton
            android:id="@+id/ShareButtonPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            android:src="@drawable/share"
            app:tint="@android:color/holo_red_dark" />

    </LinearLayout>
</LinearLayout>
